# ChessOnline

./: README.md  pyproject.toml
client/: icon.svg.import  project.godot
client/chess-multiplayer-online/: icon.svg.import  project.godot  sprite_2d.tscn
client/rust/: Cargo.toml
client/rust/src/: lib.rs  player.rs  tcp_client.rs  tcp_packet_client.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs  tcp_packet_wrapper.rs  tcp_server.rs
